# Rehab-Flow

./: README.md  pyproject.toml
src/rehab_flow/: main.py
src/rehab_flow/crews/diagnosis_crew/: diagnosis_crew.py
src/rehab_flow/crews/diagnosis_crew/config/: agents.yaml  tasks.yaml
src/rehab_flow/crews/inquiry_crew/: inquiry_crew.py
src/rehab_flow/crews/inquiry_crew/config/: agents.yaml  tasks.yaml
src/rehab_flow/crews/multiagents_report_crew/: multiagents_report_crew.py
src/rehab_flow/crews/multiagents_report_crew/config/: agents.yaml  tasks.yaml
src/rehab_flow/crews/possibilities_elimination_crew/: possibilities_elimination_crew.py
src/rehab_flow/crews/possibilities_elimination_crew/config/: agents.yaml  tasks.yaml
src/rehab_flow/crews/treatment_plan_crew/: treatment_plan_crew.py
src/rehab_flow/crews/treatment_plan_crew/config/: agents.yaml  tasks.yaml
summary_reports/: report_9e74bbf4-1bdf-4820-9fce-236998241b9a.md  report_bb002993-8584-4724-9267-d2598a122e5c.md
treatment_plans/: treatment_plan_94bd6700-197c-4972-adb9-2a2f70136219.md  treatment_plan_f410e302-2b59-4ab4-962b-f7dd1c7206ef.md
