[project]
name = "rehab_flow"
version = "0.1.0"
description = "rehab_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0",
]

[project.scripts]
kickoff = "rehab_flow.main:kickoff"
run_crew = "rehab_flow.main:kickoff"
plot = "rehab_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
